// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem overwrite default role should set role to listitem 1`] = `
<li
  class="undefined-item"
  role="listitem"
>
  test
</li>
`;

exports[`MenuItem overwrite default role should set role to none if none 1`] = `
<li
  class="undefined-item"
  role="none"
>
  test
</li>
`;

exports[`MenuItem overwrite default role should set role to none if null 1`] = `
<li
  class="undefined-item"
  role="none"
>
  test
</li>
`;

exports[`MenuItem overwrite default role should set role to option 1`] = `
<li
  class="undefined-item"
  role="option"
>
  test
</li>
`;

exports[`MenuItem rest props onClick event should only trigger 1 time along the component hierarchy 1`] = `
<ul
  class="rc-menu rc-menu-root rc-menu-inline"
  data-menu-list="true"
  role="menu"
  tabindex="0"
>
  <li
    class="rc-menu-item rc-menu-item-active className"
    data-whatever="whatever"
    role="menuitem"
    style="padding-left: 24px; font-size: 20px;"
    tabindex="-1"
    title="title"
  >
    1
  </li>
  <li
    class="rc-menu-submenu rc-menu-submenu-inline className"
    data-whatever="whatever"
    style="font-size: 20px;"
  >
    <div
      aria-controls="rc-menu-uuid-test-tmp_key-1"
      aria-expanded="false"
      aria-haspopup="true"
      class="rc-menu-submenu-title"
      role="menuitem"
      style="padding-left: 24px;"
      tabindex="-1"
      title="title"
    >
      title
      <i
        class="rc-menu-submenu-arrow"
      />
    </div>
  </li>
  <li
    class="rc-menu-item-group className"
    data-whatever="whatever"
    style="font-size: 20px;"
  >
    <div
      class="rc-menu-item-group-title"
      title="title"
    >
      title
    </div>
    <ul
      class="rc-menu-item-group-list"
    >
      <li
        class="rc-menu-item className"
        data-whatever="whatever"
        role="menuitem"
        style="padding-left: 24px; font-size: 20px;"
        tabindex="-1"
        title="title"
      >
        4
      </li>
    </ul>
  </li>
</ul>
`;
